import org.apache.commons.lang3.JavaVersion

buildscript {
    repositories {
        mavenLocal()
    }
    dependencies {
        classpath("net.serenity-bdd:serenity-gradle-plugin:2.4.48")
    }
}

plugins {
    id 'java'
    id 'maven'
}

apply plugin: 'net.serenity-bdd.aggregator'

group = 'com.manning.bddinaction'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = 15

tasks.withType(JavaCompile) {
    options.compilerArgs += '--enable-preview'
}

tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}

repositories {
    mavenCentral()
    mavenLocal()
}

dependencies {
    testImplementation("junit:junit:4.13")
    testImplementation 'net.serenity-bdd:serenity-core:2.4.48'
    testImplementation 'net.serenity-bdd:serenity-screenplay:2.4.48'
    testImplementation 'net.serenity-bdd:serenity-screenplay-webdriver:2.4.48'
    testImplementation 'net.serenity-bdd:serenity-rest-assured:2.4.48'
    testImplementation 'net.serenity-bdd:serenity-ensure:2.4.48'
    testImplementation 'org.jetbrains.kotlin:kotlin-stdlib:1.4.10'
    testImplementation 'net.serenity-bdd:serenity-cucumber6:2.4.48'
    testImplementation 'org.assertj:assertj-core:3.6.2'
    testImplementation 'com.fasterxml.jackson.core:jackson-databind:2.11.0'
    testImplementation 'ch.qos.logback:logback-classic:1.0.13'
}

test {
    useJUnit()
    filter {
        includeTestsMatching "*TestSuite"
    }
    maxParallelForks 4
}

test.finalizedBy(aggregate)